update superset image
Signed-off-by: Maxim Sukharev <max@smacker.ru>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - postgres:/var/lib/postgresql/data
 
   superset:
-    image: smacker/superset:demo
+    image: smacker/superset:demo-with-bblfsh
     restart: unless-stopped
     environment:
       POSTGRES_DB: superset
