Fix bblfsh import collision in PYTHONPATH
Signed-off-by: Carlos Martín <carlos.martin.sanchez@gmail.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -53,7 +53,8 @@ RUN pip install --upgrade setuptools pip \
 COPY --chown=superset:superset superset/superset superset
 
 ENV PATH=/home/superset/superset/bin:$PATH \
-    PYTHONPATH=/home/superset/superset/:$PYTHONPATH
+    PYTHONPATH=/home/superset/:$PYTHONPATH \
+    SUPERSET_CONFIG_PATH=/home/superset/superset/superset_config.py
 
 USER superset
 
