--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - postgres:/var/lib/postgresql/data
 
   superset:
-    image: src-d/superset:latest
+    image: srcd/superset:latest
     restart: unless-stopped
     environment:
       POSTGRES_DB: superset
