--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,9 @@ jobs:
         provider: releases
         api_key: $GITHUB_TOKEN
         file_glob: true
-        file: build/*.tar.gz
+        file:
+          - build/*.tar.gz
+          - docker-compose.yml
         skip_cleanup: true
         on:
           all_branches: true
