Set sourced-ui version to v0.1.0
Signed-off-by: Carlos Martín <carlos.martin.sanchez@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - postgres:/var/lib/postgresql/data
 
   sourced-ui:
-    image: srcd/sourced-ui:latest
+    image: srcd/sourced-ui:v0.1.0
     restart: unless-stopped
     environment:
       ADMIN_LOGIN: admin
