--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
 
   gitbase:
-    image: srcd/gitbase:v0.20.0
+    image: srcd/gitbase:v0.21.0-beta1
     ports:
       - 3306:3306
     environment:
