--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,31 @@ services:
       - 9432:9432
     restart: always
 
+  gitcollector:
+    image: srcd/gitcollector:v0.0.1-beta.2
+    environment:
+      GITHUB_ORGANIZATION: ${GITHUB_ORGANIZATION:-}
+      GITHUB_TOKEN: ${GITHUB_TOKEN:-}
+      LOG_LEVEL: debug
+    volumes:
+      - type: ${GITBASE_VOLUME_TYPE}
+        source: ${GITBASE_VOLUME_SOURCE}
+        target: /library
+        consistency: delegated
+
   gitbase:
-    image: srcd/gitbase:v0.21.0-beta1
+    #image: srcd/gitbase:v0.21.0-beta1
+    image: jfontan/gitbase:siva-2
     ports:
       - 3306:3306
     environment:
       BBLFSH_ENDPOINT: bblfsh:9432
+      SIVA: ${GITBASE_SIVA}
     depends_on:
       - bblfsh
     volumes:
-      - type: bind
-        source: ${GITBASE_REPOS_DIR}
+      - type: ${GITBASE_VOLUME_TYPE}
+        source: ${GITBASE_VOLUME_SOURCE}
         target: /opt/repos
         read_only: true
         consistency: delegated
@@ -53,9 +67,12 @@ services:
       - postgres:/var/lib/postgresql/data
 
   sourced-ui:
-    image: srcd/sourced-ui:v0.3.0-beta.1
+    #image: srcd/sourced-ui:v0.3.0-beta.1
+    image: srcd/sourced-ui:latest
     restart: unless-stopped
     environment:
+      SYNC_MODE: 'true'
+      METADATA_DB: metadata
       ADMIN_LOGIN: admin
       ADMIN_FIRST_NAME: admin
       ADMIN_LAST_NAME: admin
@@ -84,6 +101,8 @@ services:
       - gitbase
 
 volumes:
+  gitbase_repositories:
+    external: false
   gitbase_indexes:
     external: false
   postgres:
