--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,7 +88,7 @@ services:
     image: srcd/sourced-ui:v0.3.0-beta.2
     restart: unless-stopped
     environment:
-      SYNC_MODE: 'true'
+      SYNC_MODE: ${GITBASE_SIVA}
       ADMIN_LOGIN: admin
       ADMIN_FIRST_NAME: admin
       ADMIN_LAST_NAME: admin
