--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,7 +104,7 @@ services:
       - metadata:/var/lib/postgresql/data
 
   sourced-ui:
-    image: srcd/sourced-ui:v0.3.0-rc.1
+    image: srcd/sourced-ui:v0.3.0
     restart: unless-stopped
     environment:
       SYNC_MODE: ${GITBASE_SIVA}
