Make sourced-ui to depend on bblfsh-web
Signed-off-by: David Pordomingo <david.pordomingo.f@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,7 +140,7 @@ services:
       - metadatadb
       - redis
       - gitbase
-      - ghsync
+      - bblfsh-web
 
 volumes:
   gitbase_repositories:
