Add skeleton for end to end tests
Signed-off-by: Carlos Martín <carlos.martin.sanchez@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,14 @@ jobs:
         - make packages
         - make test-coverage
 
+    - stage: tests
+      name: 'Integration Tests Linux'
+      script:
+        # cannot use 'make test-integration' because 'make clean' fails with
+        # GO111MODULE, see https://github.com/golang/go/issues/31002
+        - make build
+        - make test-integration-no-build
+
     - stage: release
       name: 'Release to GitHub'
       script:
