Update ghsync to v0.2.0-rc.1
Signed-off-by: Carlos Martín <carlos.martin.sanchez@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
         consistency: delegated
 
   ghsync:
-    image: srcd/ghsync:v0.2.0-beta.2
+    image: srcd/ghsync:v0.2.0-rc.1
     entrypoint: ['/bin/sh']
     # wait for db to be created
     # we need to use something like https://github.com/vishnubob/wait-for-it
