--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       # use main db
       GITCOLLECTOR_METRICS_DB_URI: postgresql://superset:superset@postgres:5432/superset?sslmode=disable
       GITCOLLECTOR_NO_UPDATES: 'true'
+      GITCOLLECTOR_NO_FORKS: ${NO_FORKS:-true}
       LOG_LEVEL: ${LOG_LEVEL:-info}
     depends_on:
       - postgres
@@ -31,7 +32,7 @@ services:
           cpus: ${GITCOLLECTOR_LIMIT_CPU:-0.0}
 
   ghsync:
-    image: srcd/ghsync:v0.2.0-rc.1
+    image: srcd/ghsync:v0.2.0-rc.2
     entrypoint: ['/bin/sh']
     # wait for db to be created
     # we need to use something like https://github.com/vishnubob/wait-for-it
@@ -47,6 +48,7 @@ services:
       GHSYNC_POSTGRES_PASSWORD: metadata
       GHSYNC_POSTGRES_HOST: metadatadb
       GHSYNC_POSTGRES_PORT: 5432
+      GHSYNC_NO_FORKS: ${NO_FORKS:-true}
       LOG_LEVEL: ${LOG_LEVEL:-info}
 
   gitbase:
