Update sourced-ui to v0.4.0
Signed-off-by: Carlos Martín <carlos.martin.sanchez@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,7 +115,7 @@ services:
       - metadata:/var/lib/postgresql/data
 
   sourced-ui:
-    image: srcd/sourced-ui:v0.4.0-rc.2
+    image: srcd/sourced-ui:v0.4.0
     restart: unless-stopped
     environment:
       SYNC_MODE: ${GITBASE_SIVA}
