Upgrade srcd/gitbase-spark-connector-enterprise to v0.6.0
Signed-off-by: Carlos Martín <carlos.martin.sanchez@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       LOG_LEVEL: ${LOG_LEVEL:-info}
 
   gsc:
-    image: srcd/gitbase-spark-connector-enterprise:latest
+    image: srcd/gitbase-spark-connector-enterprise:v0.6.0
     command:
       - start-thrift-server
     depends_on:
